# advent-of-code-2021

./: .wakatime-project  Day10.hs  Day14.hs  Day15.hs  Day9.hs  Main.hs  README.md  Utils.hs  advent2021.cabal  day15Input.txt
